--- a/public/user-view-element/styles/style.css
+++ b/public/user-view-element/styles/style.css
@@ -18553,18 +18553,19 @@ textarea.form-control {
 
 .left-side-bar {
   position: fixed;
-  left: 0;
-  top: 0;
-  width: 250px;
-  height: 100vh;
+  /*left: 0;*/
+  /*top: 0;*/
+  /*width: 250px;*/
+  /*height: 100vh;*/
   z-index: 1000;
-  background: #ffffff;
-  -webkit-box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.4);
-  box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.4);
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease; }
+  /*background: #ffffff;*/
+  /*-webkit-box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.4);*/
+  /*box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.4);*/
+  /*-webkit-transition: all 0.5s ease;*/
+  transition: all 0.5s ease;
+}
 
-.left-side-bar:before {
+/*.left-side-bar:before {
   content: "";
   position: fixed;
   left: 0;
@@ -18575,7 +18576,7 @@ textarea.form-control {
   background: rgba(0, 0, 0, 0.3);
   display: none;
   -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out; }
+  transition: all 0.3s ease-in-out; }*/
 
 .left-side-bar.open {
   left: 0; }
@@ -18720,9 +18721,7 @@ textarea.form-control {
 /*==============================================================
 	Login End
 ==============================================================*/
-.main-container {
-  padding: 70px 0 0px 250px;
-  height: 100vh; }
+
 
 .page-header .dropdown-menu {
   border-radius: 5px; }
