--- a/public/user-view-element/custom-css/custom-user-style.css
+++ b/public/user-view-element/custom-css/custom-user-style.css
@@ -66,6 +66,11 @@
     padding: 5px;
 }
 
+.card,
+.card-header:first-child{
+    border-radius: 0;
+}
+
 /*menu*/
 
 .default-color{
@@ -84,12 +89,18 @@
 
 }
 /*right sidebar*/
-.right_sidebar .all-batch{
-    max-height: 300px;
-}
 
 .right_sidebar .all-batch ul{
     list-style: none;
+    padding-left: 0;
+}
+.right_sidebar .all-batch .card-header{
+    background-color: #3f51b5;
+    color:#fff
+}
+.right_sidebar .all-batch .card-body{
+   overflow-y: scroll;
+   height: 250px
 }
 
 .right_sidebar .all-batch ul>a>li{
@@ -323,7 +334,7 @@
 }
 
 .left-side-deco .card.hovercard .cardheader {
-    /*background: url("http://lorempixel.com/850/280/nature/4/");*/
+    background: url("../../img/add.jpg");
     background-size: cover;
     height: 135px;
 }
