--- a/public/rzs-blog/css/body.css
+++ b/public/rzs-blog/css/body.css
@@ -41,8 +41,8 @@
 }
 
 .container-wrap {
-    padding: 90px 0px 0px 0px;
-    height: 100vh;
+    padding: 10px 0px 0px 0px;
+    /*height: 100vh;*/
 }
 
 
@@ -67,4 +67,49 @@
 
 #modalLoginAvatar .modal-body p{
     margin-bottom: 0px;
+}
+
+
+/*blog home page body*/
+
+/*home article*/
+.home_content_wrap{
+  /*margin-right: 15px;*/
+  margin-bottom: 40px
+}
+.home_content_wrap .settings{
+  position: absolute;
+    right: 3%;
+    top: 3%;
+    font-size: 18px;
+    color: gray;
+}
+.home_content_wrap .item_head img{
+  width: 100%;
+  height: 232px;
+}
+.home_content_wrap .item_body{
+  margin: 20px 0;
+}
+.home_content_wrap .item_body .item_body_head img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.home_content_wrap .item_body .item_body_head .item_body_title p{
+  margin: 0;
+  font-size: 18px;
+  font-weight: 600;
+}
+.home_content_wrap .item_body .item_body_head .item_body_meta p{
+  font-size: 14px;
+  color: gray;
+}
+.home_content_wrap .item_body .item_body_content p{
+  font-size: 14px;
+  color: #777;
+}
+.home_content_wrap .item_body .item_body_footer{
+  font-size: 14px;
+  color: gray;
 }
