--- a/public/rzs-blog/css/header.css
+++ b/public/rzs-blog/css/header.css
@@ -116,3 +116,13 @@
         padding-left: 20%;
     }
 }
+
+/*menu position*/
+
+.fixed{
+    z-index: 9999;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
