--- a/public/rzs-blog/css/body.css
+++ b/public/rzs-blog/css/body.css
@@ -106,7 +106,7 @@
 .home_content_wrap .settings{
   position: absolute;
     right: 3%;
-    /* top: 3%; */
+    top: 1%;
     font-size: 18px;
     color: gray;
     z-index: 100000;
@@ -200,47 +200,6 @@
   border-radius: 3px;
   color: #fff;
 }
-
-
-
-/* settings dropdown style */
-.dropbtn {
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  overflow: auto;
-  box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.3);
-  z-index: 1;
-  right: 22%;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 0px 15px;
-  text-decoration: none;
-  display: block;
-  font-size: 14px;
-}
-
-.show {display: block;}
-
-
-
-
-
-
 
 
 /**
