--- a/public/rzs-blog/css/body.css
+++ b/public/rzs-blog/css/body.css
@@ -112,9 +112,18 @@
     z-index: 100000;
     cursor: pointer;
 }
-.home_content_wrap .item_head img{
-  width: 100%;
-  /* height: 200px; */
+.home_content_wrap .item_head{
+  /* background: url(../../img/add.jpg); */
+  background: url(../../img/title-image.png);
+  height: 300px;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+  background-position: center;
+  /* background-position: 0px 85px; */
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
 }
 .home_content_wrap .item_body{
   /* margin: 20px 0; */
@@ -258,7 +267,7 @@ position: relative;
 /**
 * Lineas / Detalles
 -----------------------*/
-.comments-list:before {
+/* .comments-list:before {
 content: '';
 width: 2px;
 height: 100%;
@@ -266,9 +275,9 @@ background: #c7cacb;
 position: absolute;
 left: 32px;
 top: 0;
-}
+} */
 
-.comments-list:after {
+/* .comments-list:after {
 content: '';
 position: absolute;
 background: #c7cacb;
@@ -280,7 +289,7 @@ border: 3px solid #dee1e3;
 -webkit-border-radius: 50%;
 -moz-border-radius: 50%;
 border-radius: 50%;
-}
+} */
 
 .reply-list:before, .reply-list:after {display: none;}
 .reply-list li:before {
@@ -441,7 +450,7 @@ border-radius: 0 0 4px 4px;
 
 .comment-box .comment-name.by-author, .comment-box .comment-name.by-author a {color: #03658c;}
 .comment-box .comment-name.by-author:after {
-content: 'autor';
+content: '2007';
 background: #03658c;
 color: #FFF;
 font-size: 12px;
