--- a/public/rzs-blog/css/body.css
+++ b/public/rzs-blog/css/body.css
@@ -106,7 +106,7 @@
 .home_content_wrap .settings{
   position: absolute;
     right: 3%;
-    top: 1%;
+    top: 0;
     font-size: 18px;
     color: gray;
     z-index: 100000;
@@ -243,9 +243,8 @@ background: #dee1e3;
 /** ====================
 * Lista de Comentarios
 =======================*/
-.comments-container {
-/* margin: 60px auto 15px;
-width: 768px; */
+.comments-container input{
+  width: 85%;
 }
 
 .comments-container h1 {
