--- a/public/rzs-blog/css/style.css
+++ b/public/rzs-blog/css/style.css
@@ -1,5 +1,29 @@
-#_r_rzsian_home{
-    /*background-image: url("../img/background.jpg");*/
+#_r_rzsian_home .col-md-12{
+    padding-right: 0;
+    padding-left: 0;
+}
+
+
+._r_rzsian_sitelogo_wrap{
+    background-image: url(../../img/desktop_back.jpg);
+    /* background-position: 0px 85px; */
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    background-size: 100% 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+}
+
+._r_rzsian_allsite_wrap{
+    position: absolute;
+    top: 50%;
+}
+
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;  
 }
 
 #_r_rzsian_home ._r_nav_wrap{
@@ -37,11 +61,10 @@
 }
 
 ._r_rzsian_allsite_wrap ._r_rzsian_site{
-    height: 112px;
     width: 112px;
-    padding: 15px 7px;
     text-align: center;
     margin-bottom: 20px;
+    opacity: .8;
 }
 
 
@@ -71,15 +94,12 @@
   color: red;
 }
 
-/*edit information page*/
 
 #modalLRForm a, a.disabled:hover, a:disabled:hover{
     color: #000;
 }
 
-/*edit information page end*/
 
-/*all student*/
 #all_student{
     margin-top: 40px;
 }
@@ -132,3 +152,21 @@
     text-align: center;
 }
 /*all student end*/
+
+/* media query */
+
+@media only screen and (max-width: 660px){
+    ._r_rzsian_sitelogo_wrap{
+        background-image: url(../../img/mobile_back.jpg);
+    }
+    
+    ._r_rzsian_allsite_wrap {
+        left: 23% !important;
+    bottom: 40% !important;
+    }
+    
+    .dropdown-menu-right {
+        right: unset !important;
+        left: 0 !important;
+    }
+}
