--- a/public/rzs-blog/css/body.css
+++ b/public/rzs-blog/css/body.css
@@ -439,7 +439,7 @@ border-radius: 50%;
 
 .comment-box .comment-head {
     background: #FCFCFC;
-    padding: 8px 12px;
+    padding: 8px 12px 0;
     border-bottom: 1px solid #E5E5E5;
     overflow: hidden;
     -webkit-border-radius: 4px 4px 0 0;
@@ -498,12 +498,11 @@ border-radius: 50%;
     color: #03658c;
 }
 
-.comment-box .comment-name.by-author:after {
-    content: '2007';
+.comment-box .comment-head .comment_batch {
     background: #03658c;
     color: #FFF;
     font-size: 12px;
-    padding: 3px 5px;
+    padding: 0 5px;
     font-weight: 700;
     margin-left: 10px;
     -webkit-border-radius: 3px;
