--- a/public/rzs-blog/css/header.css
+++ b/public/rzs-blog/css/header.css
@@ -37,6 +37,9 @@
     z-index: 9999;
     top: -35%;
     left: 5%;
+    border-radius: 50%;
+    width: 13%;
+    opacity: .7;
 }
 
 .manu_primary_right{
