--- a/public/rzs-blog/css/style.css
+++ b/public/rzs-blog/css/style.css
@@ -170,3 +170,8 @@ input[type=number]::-webkit-outer-spin-button {
         left: 0 !important;
     }
 }
+
+.valo_lage_na::after{
+    background: red;
+    content: 'asd';
+}
