--- a/public/rzs-blog/css/right-sidebar.css
+++ b/public/rzs-blog/css/right-sidebar.css
@@ -9,10 +9,10 @@
     list-style: none;
     padding-left: 0;
 }
-.right_sidebar .all-batch .card-header{
+/* .right_sidebar .all-batch .card-header{
     background-color: #3f51b5;
     color:#fff
-}
+} */
 .right_sidebar .all-batch .card-body{
    overflow-y: scroll;
    height: 250px;
